--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>昆山语汐网络科技有限公司</title>
+    <link href="static/favicon.ico" rel="icon" type="image/x-icon" />
   </head>
   <body>
     <div id="app"></div>
