--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1" />-->
     <meta charset="utf-8">
     <title>昆山语汐网络科技有限公司</title>
     <link href="static/favicon.ico" rel="icon" type="image/x-icon" />
